--- a/HTML_CSS/film/film.html
+++ b/HTML_CSS/film/film.html
@@ -12,15 +12,36 @@
     </header>
     <article>
       <section class="photo">
-        <img src="./harrypotter.jpg" width="350" height="500" /> 
-        <aside class="sinopsis">
-          Harry potter..
-        </aside>
+        <img src="./harrypotter.jpg" width="400" height="550" /> 
+        
       </section>
-
+      <aside class="synopsis">
+          <h2> Harry potter.. </h2>
+          <p>
+            It opens at the Dursleys' home where Harry Potter lives and is staying, as usual, during the summer holidays. Uncle Vernon's  sister Marge  comes to visit and treats Harry with general contempt. She viciously insults him and his parents, angering Harry who unwittingly uses his innate magical powers to cause her to inflate, and float off, out of the Dursleys' house and into the twilight. Harry flees the Dursleys' home, furious. At first he walks with determination but soon grinds to a stop as he realizes he hasn't anywhere to go. He sits down at the edge of the road with his trunk. His surroundings stir as the wind picks up and a street lamp flickers above him. A jet black dog emerges from the bushes opposite, growling at him and he raises his wand. At that instant however, the eccentric Knight Bus, for lost witches or wizards, makes a sharp appearance and escorts Harry on a wacky journey to the wizards' pub 'The Leaky Cauldron.' While there, Harry learns that Sirius Black , an alleged supporter of Lord Voldemort, the dark wizard, has escaped from Azkaban prison. Harry must meet the Minister of Magic Cornelius Fudge (Robert Hardy) and he fears expulsion from Hogwarts for his using of under-age magic out of school. However, the matter is surprisingly dropped as "...the Ministry doesn't send students to Azkaban for blowing up their aunts." 
+          </p>
+      </aside>
 
       <section class="inf">
-        information
+        <p> <strong>Released:</strong> 2004</p>
+        <p> <strong>Director:</strong> Alfonso Cuarón </p>
+        <p> <strong>Actors:</strong> 
+          <ul>
+            <li>Daniel Radcliffe</li>
+            <li>Rupert Grint</li>
+            <li>Emma Watson</li>
+            <li>Michael Gambon</li>
+            <li>David Thewlis</li>
+            <li>Alan Rickman</li>
+          </ul>
+        </p>
+        <p> <strong>Related films:</strong>
+            <ul>
+              <li class="list"><a href="http://www.ecartelera.com/peliculas/harry-potter-y-la-piedra-filosofal/">Harry Potter and the Sorcerer's Stone</li>
+              <li class="list"><a href="http://www.ecartelera.com/peliculas/harry-potter-y-el-caliz-de-fuego/">Harry Potter and the Goblet of Fire</li>
+              <li class="list"><a href="http://www.ecartelera.com/peliculas/harry-potter-y-la-camara-secreta/">Harry Potter and the Chamber of Secrets</li>
+            </ul>
+        </p>
       </section>
 
     </article>
